--- a/human/requirements.txt
+++ b/human/requirements.txt
@@ -20,6 +20,7 @@ Jinja2==2.10
 jmespath==0.9.3
 kombu==4.1.0
 MarkupSafe==1.0
+openapi-codec==1.3.2
 pathspec==0.5.5
 python-dateutil==2.6.1
 python-mimeparse==1.6.0
@@ -27,6 +28,7 @@ pytz==2018.3
 PyYAML==3.12
 requests==2.9.1
 semantic-version==2.5.0
+simplejson==3.13.2
 six==1.11.0
 tabulate==0.7.5
 termcolor==1.1.0
