--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
-celery==4.1.0
+certifi==2018.1.18
+chardet==3.0.4
 coreapi==2.3.3
-Django==2.0.3
-djangorestframework==3.7.7
+coreschema==0.0.4
+dj-database-url==0.5.0
+Django==2.0.4
+django-heroku==0.3.1
+django-rest-framework==0.1.0
+djangorestframework==3.8.2
+gunicorn==19.7.1
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
+psycopg2==2.7.4
+pytz==2018.4
+requests==2.18.4
+stripe==1.79.1
+uritemplate==3.0.0
+urllib3==1.22
+whitenoise==3.3.1
+wincertstore==0.2
