--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.8.2
 gunicorn==19.7.1
+heroku==0.1.4
+human==0.1
 idna==2.6
 itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
 psycopg2==2.7.4
+python-dateutil==1.5
 pytz==2018.4
 requests==2.18.4
 stripe==1.79.1
