--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
 psycopg2==2.7.4
+pymessenger==0.0.7.0
 python-dateutil==1.5
 pytz==2018.4
 requests==2.18.4
