--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Custom
-*.sqlite3
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +99,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# direnv
+.envrc
